@@ -8,7 +8,7 @@
 # Copyright (c) 2002 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: pop3.test,v 1.3 2002/09/04 17:22:51 andreas_kupries Exp $
+# RCS: @(#) $Id: pop3.test,v 1.4 2002/10/14 21:00:16 andreas_kupries Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -263,7 +263,7 @@ test pop3-1.2 {status ok} {
     pop3::close $psock
     delsrv
     set status
-} {3 18 {msex 0 retr_mode retr}}
+} {10 60 {msex 0 retr_mode retr}}
 
 # ----------------------------------------------------------------------
 # ----------------------------------------------------------------------
@@ -409,7 +409,7 @@ test pop3-6.0 {get and delete all message, nano-client} {
     pop3::close $psock
     delsrv
     set res
-} {3 86 86 86 0}
+} {10 86 86 86 86 86 86 86 86 86 86 0}
 
 # ----------------------------------------------------------------------
 # ----------------------------------------------------------------------
